--- a/src/main/asciidoc/cheatsheet/PemTrustOptions.adoc
+++ b/src/main/asciidoc/cheatsheet/PemTrustOptions.adoc
@@ -38,7 +38,7 @@
 |===
 ^|Name | Type ^| Description
 
-|`certPaths`
+|[[certPaths]]`certPaths`
 |`Array of String`
 |+++
 Add a certificate path+++
