--- a/src/main/asciidoc/cheatsheet/DatagramSocketOptions.adoc
+++ b/src/main/asciidoc/cheatsheet/DatagramSocketOptions.adoc
@@ -10,47 +10,47 @@
 |===
 ^|Name | Type ^| Description
 
-|`sendBufferSize`
+|[[sendBufferSize]]`sendBufferSize`
 |`Number`
 |+++
 Set the TCP send buffer size+++
 
-|`receiveBufferSize`
+|[[receiveBufferSize]]`receiveBufferSize`
 |`Number`
 |+++
 Set the TCP receive buffer size+++
 
-|`reuseAddress`
+|[[reuseAddress]]`reuseAddress`
 |`Boolean`
 |+++
 Set the value of reuse address+++
 
-|`trafficClass`
+|[[trafficClass]]`trafficClass`
 |`Number`
 |+++
 Set the value of traffic class+++
 
-|`broadcast`
+|[[broadcast]]`broadcast`
 |`Boolean`
 |+++
 Set if the socket can receive broadcast packets+++
 
-|`loopbackModeDisabled`
+|[[loopbackModeDisabled]]`loopbackModeDisabled`
 |`Boolean`
 |+++
 Set if loopback mode is disabled+++
 
-|`multicastTimeToLive`
+|[[multicastTimeToLive]]`multicastTimeToLive`
 |`Number`
 |+++
 Set the multicast ttl value+++
 
-|`multicastNetworkInterface`
+|[[multicastNetworkInterface]]`multicastNetworkInterface`
 |`String`
 |+++
 Set the multicast network interface address+++
 
-|`ipV6`
+|[[ipV6]]`ipV6`
 |`Boolean`
 |+++
 Set if IP v6 should be used+++
