--- a/src/main/asciidoc/cheatsheet/DeploymentOptions.adoc
+++ b/src/main/asciidoc/cheatsheet/DeploymentOptions.adoc
@@ -11,44 +11,44 @@
 |===
 ^|Name | Type ^| Description
 
-|`worker`
+|[[worker]]`worker`
 |`Boolean`
 |+++
 Set whether the verticle(s) should be deployed as a worker verticle+++
 
-|`multiThreaded`
+|[[multiThreaded]]`multiThreaded`
 |`Boolean`
 |+++
 Set whether the verticle(s) should be deployed as a multi-threaded worker verticle+++
 
-|`isolationGroup`
+|[[isolationGroup]]`isolationGroup`
 |`String`
 |+++
 Set the isolation group that will be used when deploying the verticle(s)+++
 
-|`ha`
+|[[ha]]`ha`
 |`Boolean`
 |+++
 Set whether the verticle(s) will be deployed as HA.+++
 
-|`extraClasspath`
+|[[extraClasspath]]`extraClasspath`
 |`Array of String`
 |+++
 Set any extra classpath to be used when deploying the verticle.
  <p>
  Ignored if no isolation group is set.+++
 
-|`instances`
+|[[instances]]`instances`
 |`Number`
 |+++
 Set the number of instances that should be deployed.+++
 
-|`redeploy`
+|[[redeploy]]`redeploy`
 |`Boolean`
 |-
-|`redeployScanPeriod`
+|[[redeployScanPeriod]]`redeployScanPeriod`
 |`Number`
 |-
-|`redeployGracePeriod`
+|[[redeployGracePeriod]]`redeployGracePeriod`
 |`Number`
 |-|===
