--- a/src/main/asciidoc/cheatsheet/HttpClientOptions.adoc
+++ b/src/main/asciidoc/cheatsheet/HttpClientOptions.adoc
@@ -10,140 +10,140 @@
 |===
 ^|Name | Type ^| Description
 
-|`sendBufferSize`
+|[[sendBufferSize]]`sendBufferSize`
 |`Number`
 |+++
 Set the TCP send buffer size+++
 
-|`receiveBufferSize`
+|[[receiveBufferSize]]`receiveBufferSize`
 |`Number`
 |+++
 Set the TCP receive buffer size+++
 
-|`reuseAddress`
+|[[reuseAddress]]`reuseAddress`
 |`Boolean`
 |+++
 Set the value of reuse address+++
 
-|`trafficClass`
+|[[trafficClass]]`trafficClass`
 |`Number`
 |+++
 Set the value of traffic class+++
 
-|`tcpNoDelay`
+|[[tcpNoDelay]]`tcpNoDelay`
 |`Boolean`
 |+++
 Set whether TCP no delay is enabled+++
 
-|`tcpKeepAlive`
+|[[tcpKeepAlive]]`tcpKeepAlive`
 |`Boolean`
 |+++
 Set whether TCP keep alive is enabled+++
 
-|`soLinger`
+|[[soLinger]]`soLinger`
 |`Number`
 |+++
 Set whether SO_linger keep alive is enabled+++
 
-|`usePooledBuffers`
+|[[usePooledBuffers]]`usePooledBuffers`
 |`Boolean`
 |+++
 Set whether Netty pooled buffers are enabled+++
 
-|`idleTimeout`
+|[[idleTimeout]]`idleTimeout`
 |`Number`
 |-
-|`ssl`
+|[[ssl]]`ssl`
 |`Boolean`
 |+++
 Set whether SSL/TLS is enabled+++
 
-|`keyStoreOptions`
+|[[keyStoreOptions]]`keyStoreOptions`
 |`link:JksOptions.html[JksOptions]`
 |+++
 Set the key/cert options in jks format, aka Java keystore.+++
 
-|`pfxKeyCertOptions`
+|[[pfxKeyCertOptions]]`pfxKeyCertOptions`
 |`link:PfxOptions.html[PfxOptions]`
 |+++
 Set the key/cert options in pfx format.+++
 
-|`pemKeyCertOptions`
+|[[pemKeyCertOptions]]`pemKeyCertOptions`
 |`link:PemKeyCertOptions.html[PemKeyCertOptions]`
 |+++
 Set the key/cert store options in pem format.+++
 
-|`trustStoreOptions`
+|[[trustStoreOptions]]`trustStoreOptions`
 |`link:JksOptions.html[JksOptions]`
 |+++
 Set the trust options in jks format, aka Java trustore+++
 
-|`pfxTrustOptions`
+|[[pfxTrustOptions]]`pfxTrustOptions`
 |`link:PfxOptions.html[PfxOptions]`
 |+++
 Set the trust options in pfx format+++
 
-|`pemTrustOptions`
+|[[pemTrustOptions]]`pemTrustOptions`
 |`link:PemTrustOptions.html[PemTrustOptions]`
 |+++
 Set the trust options in pem format+++
 
-|`enabledCipherSuites`
+|[[enabledCipherSuites]]`enabledCipherSuites`
 |`Array of String`
 |+++
 Add an enabled cipher suite+++
 
-|`crlPaths`
+|[[crlPaths]]`crlPaths`
 |`Array of String`
 |+++
 Add a CRL path+++
 
-|`connectTimeout`
+|[[connectTimeout]]`connectTimeout`
 |`Number`
 |+++
 Set the connect timeout+++
 
-|`trustAll`
+|[[trustAll]]`trustAll`
 |`Boolean`
 |+++
 Set whether all server certificates should be trusted+++
 
-|`maxPoolSize`
+|[[maxPoolSize]]`maxPoolSize`
 |`Number`
 |+++
 Set the maximum pool size for connections+++
 
-|`keepAlive`
+|[[keepAlive]]`keepAlive`
 |`Boolean`
 |+++
 Set whether keep alive is enabled on the client+++
 
-|`pipelining`
+|[[pipelining]]`pipelining`
 |`Boolean`
 |+++
 Set whether pipe-lining is enabled on the client+++
 
-|`verifyHost`
+|[[verifyHost]]`verifyHost`
 |`Boolean`
 |+++
 Set whether hostname verification is enabled+++
 
-|`tryUseCompression`
+|[[tryUseCompression]]`tryUseCompression`
 |`Boolean`
 |+++
 Set whether compression is enabled+++
 
-|`maxWebsocketFrameSize`
+|[[maxWebsocketFrameSize]]`maxWebsocketFrameSize`
 |`Number`
 |+++
 Set the max websocket frame size+++
 
-|`defaultHost`
+|[[defaultHost]]`defaultHost`
 |`String`
 |+++
 Set the default host name to be used by this client in requests if none is provided when making the request.+++
 
-|`defaultPort`
+|[[defaultPort]]`defaultPort`
 |`Number`
 |+++
 Set the default port to be used by this client in requests if none is provided when making the request.+++
