--- a/src/main/asciidoc/js/net.adoc
+++ b/src/main/asciidoc/js/net.adoc
@@ -365,8 +365,8 @@ client.connect(4321, "localhost", function (res, res_err) {
 === Configuring connection attempts
 
 A client can be configured to automatically retry connecting to the server in the event that it cannot connect.
-This is configured with `link:../cheatsheet/NetClientOptions.html#setReconnectInterval[setReconnectInterval]` and
-`link:../cheatsheet/NetClientOptions.html#setReconnectAttempts[setReconnectAttempts]`.
+This is configured with `link:../cheatsheet/NetClientOptions.html#reconnectInterval[reconnectInterval]` and
+`link:../cheatsheet/NetClientOptions.html#reconnectAttempts[reconnectAttempts]`.
 
 NOTE: Currently Vert.x will not attempt to reconnect if a connection fails, reconnect attempts and interval
 only apply to creating initial connections.
@@ -396,7 +396,7 @@ to create the servers or clients.
 
 ==== Enabling SSL/TLS on the server
 
-SSL/TLS is enabled with  `link:../cheatsheet/NetServerOptions.html#setSsl[ssl]`.
+SSL/TLS is enabled with  `link:../cheatsheet/NetServerOptions.html#ssl[ssl]`.
 
 By default it is disabled.
 
@@ -652,7 +652,7 @@ Likewise server configuration, the client trust can be configured in several way
 The first method is by specifying the location of a Java trust-store which contains the certificate authority.
 
 It is just a standard Java key store, the same as the key stores on the server side. The client
-trust store location is set by using the function `link:../cheatsheet/JksOptions.html#setPath[path]` on the
+trust store location is set by using the function `link:../cheatsheet/JksOptions.html#path[path]` on the
 `link:../cheatsheet/JksOptions.html[jks options]`. If a server presents a certificate during connection which is not
 in the client trust store, the connection attempt will not succeed.
 
@@ -757,7 +757,7 @@ connecting. The client can be configured in several ways:
 
 The first method is by specifying the location of a Java key-store which contains the key and certificate.
 Again it's just a regular Java key store. The client keystore location is set by using the function
-`link:../cheatsheet/JksOptions.html#setPath[path]` on the
+`link:../cheatsheet/JksOptions.html#path[path]` on the
 `link:../cheatsheet/JksOptions.html[jks options]`.
 
 [source,js]
@@ -861,7 +861,7 @@ Keep in mind that pem configuration, the private key is not crypted.
 ==== Revoking certificate authorities
 
 Trust can be configured to use a certificate revocation list (CRL) for revoked certificates that should no
-longer be trusted. The `link:../cheatsheet/NetClientOptions.html#addCrlPath[crlPath]` configures
+longer be trusted. The `link:../cheatsheet/NetClientOptions.html#crlPath[crlPath]` configures
 the crl list to use:
 
 [source,js]
