--- a/src/main/asciidoc/js/dns.adoc
+++ b/src/main/asciidoc/js/dns.adoc
@@ -176,7 +176,7 @@ The `link:jsdoc/mx_record-MxRecord.html[MxRecord]` allows you to access the prio
 
 [source,js]
 ----
-todo
+Code not translatable
 ----
 
 === resolveTXT
@@ -254,7 +254,7 @@ The SrvRecord allows you to access all informations contained in the SRV record 
 
 [source,js]
 ----
-todo
+Code not translatable
 ----
 
 Please refer to the API docs for the exact details.
