--- a/src/main/asciidoc/js/http.adoc
+++ b/src/main/asciidoc/js/http.adoc
@@ -815,7 +815,7 @@ request.end(buffer);
 When you're writing to a request, the first call to `write` will result in the request headers being written
 out to the wire.
 
-The actual write is asychronous and might not occur until some time after the call has returned.
+The actual write is asynchronous and might not occur until some time after the call has returned.
 
 Non-chunked HTTP requests with a request body require a `Content-Length` header to be provided.
 
@@ -926,8 +926,8 @@ If the request does not return any data within the timeout period an exception w
 
 ==== Handling exceptions
 
-You can handle exceptions corresponding to a request by setting an exception handler on the `link:jsdoc/http_client_request-HttpClientRequest.html[HttpClientRequest]`
-instance:
+You can handle exceptions corresponding to a request by setting an exception handler on the
+`link:jsdoc/http_client_request-HttpClientRequest.html[HttpClientRequest]` instance:
 
 [source,js]
 ----
@@ -942,9 +942,26 @@ request.exceptionHandler(function (e) {
 
 ----
 
-TODO - what about exceptions in the getNow methods where no exception handler can be provided??
+This does not handle non _2xx_ response that need to be handled in the
+`link:jsdoc/http_client_response-HttpClientResponse.html[HttpClientResponse]` code:
 
-Maybe need a catch all exception handler??
+[source, js]
+----
+var request = client.post("some-uri", function (response) {
+  if (response.statusCode() === 200) {
+    console.log("Everything fine");
+    return
+  }
+  if (response.statusCode() === 500) {
+    console.log("Unexpected behavior on the server side");
+    return
+  }
+});
+request.end();
+
+----
+
+IMPORTANT: `XXXNow` methods cannot receive an exception handler.
 
 ==== Specifying a handler on the client request
 
@@ -1223,7 +1240,7 @@ Let's take a verticle creating a HTTP server such as:
 [source,js]
 ----
 vertx.createHttpServer().requestHandler(function (request) {
-  request.response().end("Hello from server " + );
+  request.response().end("Hello from server " + this);
 }).listen(8080);
 
 ----
