Improve JavaScript documentation
Fixed the holes
Add the _overridable_ parts

So the documentation is complete

--- a/src/main/asciidoc/js/eventbus.adoc
+++ b/src/main/asciidoc/js/eventbus.adoc
@@ -204,15 +204,7 @@ eventBus.send("news.uk.sport", "Yay! Someone kicked a ball");
 
 ----
 
-==== Setting headers on messages
-
-Messages sent over the event bus can also contain headers. This can be specified by providing a
-`link:../cheatsheet/DeliveryOptions.html[DeliveryOptions]` when sending or publishing:
-
-[source,js]
-----
-Code not translatable
-----
+include::override/eventbus_headers.adoc[]
 
 ==== The Message object
 
@@ -315,7 +307,7 @@ for example the default `HazelcastClusterManager`.
 
 You can run Vert.x clustered on the command line with
 
- vertx run MyVerticle -cluster
+ vertx run my-verticle.js -cluster
 
 === Automatic clean-up in verticles
 
