--- a/src/main/asciidoc/js/net.adoc
+++ b/src/main/asciidoc/js/net.adoc
@@ -892,3 +892,26 @@ var options = {
 var client = vertx.createNetClient(options);
 
 ----
+
+==== Configuring the Cipher suite
+
+By default, the TLS configuration will uses the Cipher suite of the JVM running Vert.x. This Cipher suite can be
+configured with a suite of enabled ciphers:
+
+[source,js]
+----
+var options = {
+  "ssl" : true,
+  "keyStoreOptions" : keyStoreOptions,
+  "enabledCipherSuites" : [
+    "ECDHE-RSA-AES128-GCM-SHA256",
+    "ECDHE-ECDSA-AES128-GCM-SHA256",
+    "ECDHE-RSA-AES256-GCM-SHA384",
+    "CDHE-ECDSA-AES256-GCM-SHA384"
+  ]
+};
+var server = vertx.createNetServer(options);
+
+----
+
+Cipher suite can be specified on the `link:../cheatsheet/NetServerOptions.html[NetServerOptions]` or `link:../cheatsheet/NetClientOptions.html[NetClientOptions]` configuration.
