--- a/src/main/asciidoc/js/override/verticles.adoc
+++ b/src/main/asciidoc/js/override/verticles.adoc
@@ -10,9 +10,9 @@ JavaScript verticles will have the following globals pre-set as a convenience:
 * +vertx+ - A reference to the Vertx object
 * +console+ A reference to the <<console, console>> object
 
+[source, javascript]
 ----
-
-// Start a timer
+// the vertx and console objects can be used directly as:
 vertx.setPeriodic(1000, function() {
   console.log('Timer has fired');
 });
@@ -21,49 +21,40 @@ vertx.setPeriodic(1000, function() {
 exports.vertxStop = function() {
   console.log('stop called');
 }
-
-
-
 ----
 
 When the verticle is deployed the body of the script will be executed.
 
-Optionally a
+Optionally a `vertxStop` callback can be defined to be notified when the verticle is undeployed. Notice that such
+a registration is made using `exports.vertxStop = function() { ...  }`.
 
-[[console]]
 === The console
 
-Blah, blah
+In addition to the `vertx` object, JavaScript verticles have access to a `console` object that let them print
+messages. The messages are printed on Java `System.out` and `System.err`:
 
-JAVASCRIPT MOFO!
-
-Verticle classes must implement the `Verticle` interface.
-
-They can implement it directly if you like but usually it's easier to extend the abstract class `AbstractVerticle`.
-
-Here's an example verticle:
-
+[source, javascript]
 ----
-public class MyVerticle extends AbstractVerticle {
+console.log("hello"); // Print on System.out
+console.warn("warning, something wrong is happening"); // Print on System.err
+console.error("something terrible happened"); // Print on System.err
+----
 
-  // Called when verticle is deployed
-  public void start() {
-  }
+=== Defining a start method
 
-  // Optional - called when verticle is undeployed
-  public void stop() {
-  }
+By default, when your verticle is deployed, vert.x execute the body of the javascript file. However, you can
+define a start method as follows:
 
+[source, javascript]
+----
+exports.vertxStart = function() {
+ console.log("This is my verticle and it is starting...");
 }
 ----
 
-Normally you would override the start method like in the example above.
+As for `vertStop` seen above, the method is defined on the `exports` object.
 
-When Vert.x deploys the verticle it will call the start method, and when the method has completed the verticle will
-be considered started.
-
-You can also optionally override the stop method. This will be called by Vert.x when the verticle is undeployed and when
-the method has completed the verticle will be considered stopped.
+IMPORTANT: Even with a `vertxStart` method defined, vert.x executes the body of the file.
 
 === Asynchronous Verticle start and stop
 
@@ -74,50 +65,41 @@ You can't block waiting for the other verticles to deploy in your start method a
 
 So how can you do this?
 
-The way to do it is to implement the *asynchronous* start method. This version of the method takes a Future as a parameter.
-When the method returns the verticle will *not* be considered deployed yet. Some time later, after you've done everything
-you need to do (e.g. start other verticles), you can call complete on the Future (or fail) to signal that you're done.
+The way to do it is to implement the *asynchronous* start method. This version of the method takes a `Future` object
+as a parameter. When the method returns the verticle will *not* be considered deployed yet. Some time later, after
+you've done everything you need to do (e.g. start other verticles), you can call complete on the Future (or fail) to
+signal that you're done.
 
 Here's an example:
 
+[source, javascript]
 ----
-public class MyVerticle extends AbstractVerticle {
-
-  public void start(Future<Void> startFuture) {
-    // Now deploy some other verticle:
-
-    vertx.deployVerticle("com.foo.OtherVerticle", res -> {
-      if (res.succeeded()) {
-        startFuture.complete();
-      } else {
-        startFuture.fail();
-      }
-    });
-  }
-}
+exports.vertxStartAsync = function(startFuture) {
+ vertx.deployVerticle("verticle.js", function(res) {
+   if (err) {
+     startFuture.fail();
+   } else {
+     startFuture.complete();
+   }
+ });
+};
 ----
 
-Similarly, there is an asynchronous version of the stop method too. You use this if you want to do some verticle
+Similarly, there is an asynchronous version of the `stop` method too. You use this if you want to do some verticle
 cleanup that takes some time.
 
+[source, javascript]
 ----
-public class MyVerticle extends AbstractVerticle {
-
-  public void start() {
-    // Do something
+exports.vertxStopAsync = function(stopFuture) {
+ obj.doSomethingThatTakesTimes(function(r, err) {
+   if (err) {
+     stopFuture.fail();
+  } else {
+     stopFuture.complete();
   }
-
-  public void stop(Future<Void> startFuture) {
-    obj.doSomethingThatTakesTime(res -> {
-      if (res.succeeded()) {
-        startFuture.complete();
-      } else {
-        startFuture.fail();
-      }
-    });
-  }
-}
+ });
+};
 ----
 
-INFO: You don't need to manually undeploy child verticles started by a verticle, in the verticle's stop method. Vert.x
-will automatically undeploy any child verticles when the parent is undeployed.
+INFO: You don't need to manually undeploy child verticles started by a verticle, in the verticle's stop method.
+Vert.x will automatically undeploy any child verticles when the parent is undeployed.
