Commit updated version of the documentation

--- a/src/main/asciidoc/js/override/verticles.adoc
+++ b/src/main/asciidoc/js/override/verticles.adoc
@@ -1,7 +1,10 @@
 === Writing Verticles
 
 JavaScript verticles are implemented either as http://wiki.commonjs.org/wiki/Modules/1.1[CommonJS modules] or
-https://www.npmjs.com/[NPM] modules
+https://www.npmjs.com/[NPM] modules.
+
+IMPORTANT: JavaScript support requires Java 1.8.0_45+. You can check your Java version with `java -version`. Please
+update if needed.
 
 Here's an example JavaScript verticle written as a CommonJS module.
 
@@ -75,7 +78,7 @@ Here's an example:
 [source, javascript]
 ----
 exports.vertxStartAsync = function(startFuture) {
- vertx.deployVerticle("verticle.js", function(res) {
+ vertx.deployVerticle("verticle.js", function(res, err) {
    if (err) {
      startFuture.fail();
    } else {
